@@ -4,12 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.everis.continuous-testing</groupId>
+    <groupId>com.bcp.continuous-testing</groupId>
     <artifactId>web-example-ct</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <serenity.version>2.1.7</serenity.version>
         <serenity.maven.version>2.1.7</serenity.maven.version>
         <serenity.cucumber.version>1.9.51</serenity.cucumber.version>
@@ -51,7 +52,6 @@
     <!-- Configuracion ART-PROD-BCP-->
 
     <dependencies>
-
         <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-cucumber6 -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
@@ -65,7 +65,6 @@
             <artifactId>web-continuous-testing</artifactId>
             <version>1.6-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -106,8 +105,6 @@
                         <include>**/RunnerTest.java</include>
                     </includes>
                     <reuseForks>true</reuseForks>
-                    <!--<forkCount>2</forkCount>-->
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -140,6 +137,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
